Bug 125640 - FILEOPEN PPT The WordArt 'DoubleWave' has rendering error in the center
Summary: FILEOPEN PPT The WordArt 'DoubleWave' has rendering error in the center
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-02 13:37 UTC by Regina Henschel
Modified: 2019-06-05 21:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Contains "DoubleWave Up" and "DoubleWave Down" for testing. (69.00 KB, application/vnd.ms-powerpoint)
2019-06-02 13:37 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-06-02 13:37:36 UTC
Created attachment 151849 [details]
Contains "DoubleWave Up" and "DoubleWave Down" for testing.

Open attached file. It has two slides, the first with WordArt "DoubleWave Up", the second with "DoubleWave Down". The upper object is the shape, the lower object is an image, how it looks in PowerPoint.
Notice, that the path direction in the center is vertical, but it should be the same as at begin or at end.

Because DrawingML text transformations are mapped to ppt-WordArt, import from pptx is effected too. But the reason of the bug is not in the newly implemented ooxml import, but in the ms-binary filter.
Comment 1 Commit Notification 2019-06-03 15:30:27 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d2702aea99a93f6d3de498fda97cc1ca4f642356%5E%21

tdf#125640 correct Beziercurve control points in doublewave shapes

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Regina Henschel 2019-06-05 21:11:48 UTC
Fix is contained in Version: 6.4.0.0.alpha0+ (x64)
Build ID: c30ea50dd2b1c557dfbefc1a4c660fbf2402a604
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-05_00:23:26
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded