tdf#125640 correct Beziercurve control points in doublewave shapes

To follow the way doublewave shapes are drawn in MS Office binary
format and specified for DrawingML, it is necessary, that the paths
for the two wave parts are equal. That was not the case.

Change-Id: Ieeb3f7cf9feca7dd3263f813a074821ea84ef902